--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "spreadparser": "^1.0.0"
+    "jsdom": "^16.5.3",
+    "spreadparser": "^1.0.0",
+    "turndown": "^7.0.0"
   }
 }
