--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gray-matter": "^4.0.3",
     "jsdom": "^16.5.3",
     "spreadparser": "^1.0.0",
-    "turndown": "^7.0.0"
+    "turndown": "^7.0.0",
+    "yargs": "^17.0.1"
   }
 }
